src/test/ui/wf/wf-trait-bound.stderr
error[E0277]: the trait bound `U: std::marker::Copy` is not satisfied
  --> $DIR/wf-trait-bound.rs:9:1
   |
LL |   trait ExtraCopy<T:Copy> { }
   |   ----------------------- required by `ExtraCopy`
LL | 
LL | / trait SomeTrait<T,U>
LL | |     where T: ExtraCopy<U>
   | |                          - help: consider further restricting type parameter `U`: `, U: std::marker::Copy`
LL | | {
LL | | }
   | |_^ the trait `std::marker::Copy` is not implemented for `U`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
